2010-07-14  Victor Wang  <victorw@chromium.org>

Reviewed by Darin Fisher.

        [chromium] update KURLGoogle decodeURLEscapeSequences to
        use googleurl public api so it does not access functions in
        url_canon_internal. This is for chromium multi-dll build.

        https://bugs.webkit.org/show_bug.cgi?id=42177

        Test: (unittest) WebKit\chromium\tests\KURLTest.cpp

        * platform/KURLGoogle.cpp:
        (WebCore::decodeURLEscapeSequences):
2010-07-14  Victor Wang  <victorw@chromium.org>

        Reviewed by Darin Fisher.

        [Chromium] Chromium webkit dll updates:
        -. Fix WEBKIT_IMPLEMENTATION in WebCommon so
           dllimport works as expected.
        -. Update webkit.gyp so targets that depend on webkit
           has correct macros defined.
        -. Roll forward chromium deps to r52273.

        https://bugs.webkit.org/show_bug.cgi?id=42177

        * DEPS:
        * WebKit.gyp:
        * public/WebCommon.h:

Canonical link: https://commits.webkit.org/54238@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63389 268f45cc-cd09-0410-ab3c-d52691b4dbfc